# airflow-template

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.airflow  Dockerfile.mlflow  README.md  docker-compose.yml  main.py  nginx.conf  pyproject.toml
artifacts/: README.md
artifacts/0/0bc7523186c142ad8e51539dab95227a/artifacts/inference_results/: mnist_inference_results.json
artifacts/0/29b10fcd51054d55ab44b605433abf28/artifacts/inference_results/: mnist_inference_results.json
configs/: README.md
dags/: hello_world_dag.py  image_classification_pipeline.py  image_classification_pipeline.py.bak  mlflow_example_dag.py  mlflow_orchestration_pipeline.py  mlflow_simple_dag.py  mnist_simple_pipeline.py  model_management_dag.py  simple_image_classifier.py  simple_image_classifier.py.disabled
data/: README.md  create_minimal_images.py  generate_sample_data.py  inference_results.json  labels.json  labels_rgb.json  simple_image_gen.py
data/test/images/: dog_test_001.rgb
data/val/images/: cat_val_002.rgb
mlflow-projects/image-classification/: MLproject  conda.yaml  inference.py  serve.py  train.py  training_api.py
mlflow-projects/image-classification/inference_results/: mnist_inference_results.json
mlflow-projects/mnist-classification/: MLproject  conda.yaml  inference.py  train.py
mlflow-projects/mnist-classification/inference_results/: mnist_inference_results.json
models/: README.md
notebooks/: README.md
plugins/: mlflow_operators.py
scripts/: README.md  deploy_with_bentoml.py  init-connections.py  init-db.sh
sql/: README.md
(+31 files in other folders)
